# Wraparound

./: .gitignore  README.md
.claude/: launch.json
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src/components/: AxisGizmo.tsx  ConfigPanel.tsx  ErrorToast.tsx  ExportPanel.tsx  HomeView.tsx  PipelineProgress.tsx  ProjectView.tsx  SettingsView.tsx  Sidebar.tsx  SourcePanel.tsx  SplatViewer.tsx  UploadPanel.tsx  ui.tsx
app/src/lib/: api.ts  types.ts  useJobSocket.ts  viewerNav.ts
app/src/state/: store.ts
backend/: pyproject.toml
backend/splatstudio/: __init__.py  config.py  events.py  jobs.py  main.py  models.py  plugins.py  projects.py
backend/splatstudio/api/: __init__.py  jobs.py  projects.py  system.py
backend/splatstudio/pipeline/: base.py  extract.py  filter.py  optimize.py
backend/splatstudio/pipeline/export/: __init__.py  formats.py
backend/splatstudio/pipeline/poses/: __init__.py  colmap.py
backend/splatstudio/pipeline/train/: __init__.py  colmap_io.py  gsplat_backend.py  opensplat.py  splatfacto.py
backend/tests/: test_pipeline_units.py
backend/wraparound/: __init__.py  config.py  hardware.py  main.py  models.py  plugins.py
backend/wraparound/api/: exports.py  settings.py
backend/wraparound/pipeline/: __init__.py  preview.py  validate.py  video.py
scripts/: build-opensplat.sh  dev.sh  serve.sh  setup.sh
tools/: convert-ksplat.mjs
(+1 files in other folders)
