[project]
name = "splatstudio"
version = "0.1.0"
description = "Local-first video → 3D Gaussian Splat pipeline service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "plyfile>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Heavy training stack — installed by scripts/setup.sh when a GPU is present.
training = [
    "torch>=2.1",
    "gsplat>=1.4",
    "nerfstudio>=1.1",
    "scipy>=1.11",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.entry-points."splatstudio.plugins"]
# Third-party plugins register here, e.g.:
# my_backend = "my_package.plugin:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["splatstudio"]

[tool.ruff]
line-length = 100
